--- a/index.html
+++ b/index.html
@@ -38,57 +38,56 @@
                     </li>
                 </ul>
                 <span class="navbar-text">
-                        <a data-toggle="modal" data-target="#loginModal">
-                           <span class="fa fa-sign-in"></span> Login
-                         </a>
-                       </span>
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span> Login
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
 
-<!--Modal content-->
+    <!--Modal content-->
     <div id="loginModal" class="modal fade" role="dialog">
-            <div class="modal-dialog modal-lg" role="content">
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title">Login </h4>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    </div>
-                    <div class="modal-body">
-                        <form class="form-inline">
-                            <div class="form-group">
-                                <label class="sr-only" for="exampleInputEmail3">Email 
-                                    address
-                                </label>
-                                <input type="email" class="form-control form-control-sm mr-1" 
-                                    id="exampleInputEmail3" placeholder="Enter email">
-                            </div>
-                            <div class="form-group">
-                                <label class="sr-only" for="exampleInputPassword3">
-                                    Password
-                                </label>
-                                <input type="password" class="form-control form-control-sm mr-1" 
-                                    id="exampleInputPassword3" placeholder="Password">
-                            </div>
-                            <div class="form-check">
-                                <label class="form-check-label">
-                                    <input class="form-check-input" type="checkbox"> 
-                                      Remember me
-                                </label>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default btn-sm" 
-                            data-dismiss="modal">Cancel
-                        </button>
-                        <button type="submit" class="btn btn-primary btn-sm">
-                            Sign in
-                        </button>
-                    </div>
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline">
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputEmail3">Email
+                                address
+                            </label>
+                            <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3"
+                                placeholder="Enter email">
+                        </div>
+                        <div class="form-group">
+                            <label class="sr-only" for="exampleInputPassword3">
+                                Password
+                            </label>
+                            <input type="password" class="form-control form-control-sm mr-1" id="exampleInputPassword3"
+                                placeholder="Password">
+                        </div>
+                        <div class="form-check">
+                            <label class="form-check-label">
+                                <input class="form-check-input" type="checkbox">
+                                Remember me
+                            </label>
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-sm">
+                        Sign in
+                    </button>
                 </div>
             </div>
+        </div>
     </div>
 
 
@@ -106,10 +105,8 @@
                     <img src="images/logo.png" class="img-fluid">
                 </div>
                 <div class="col col-sm-3">
-                    <a class="btn btn-sm btn-warning" 
-                    data-toggle="tooltip" data-html="true" 
-                    title="Or Call us at <br><strong>+ 987 6543 2100</strong>"
-                    data-placement="bottom" href="#bskt">Reserve your baskets</a>
+                    <a class="btn btn-sm btn-warning" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+ 987 6543 2100</strong>"
+                        data-placement="bottom" href="#bskt">Reserve your baskets</a>
                 </div>
 
 
@@ -117,8 +114,66 @@
         </div>
     </header>
 
-<!--Main content-->
+    <!--Main content-->
     <div class="container">
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img src="images/dark85.jpg" alt="85% DARK CHOCOLATE">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>85% DARK CHOCOLATE
+                                    <span class="badge badge-danger">HOT</span>
+                                    <span class="badge badge-pill badge-success">$0.99</span>
+                                </h2>
+                                <p class="col d-none d-sm-block">Dark chocolate with no added sugar.
+                                    Here you can taste the flavor of cocoa beans.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/promotion.jpg" alt="Our basket">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>WEEK’S OFFER
+                                    <span class="badge badge-danger">NEW</span>
+                                    <span class="badge badge-pill badge-success">$4.99</span>
+                                </h2>
+                                <p class="col d-none d-sm-block">This week we offer a basket
+                                    with 10 delicious chocolates!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/cartoonVasilis.png" alt="Vasilis Wilson">
+                            <div class="carousel-caption d-none d-sm-block">
+                                <h2>Vasilis Wilson
+                                </h2>
+                                <p class="col d-none d-sm-block">Vasilis is well informed of all the current
+                                    trends in pastry and contributes his innovative ideas in our products.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+
+                </div>
+            </div>
+        </div>
         <!--  <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item active" aria-current="page">Home</li>
@@ -328,10 +383,10 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
-            $(function () {
-               $('[data-toggle="tooltip"]').tooltip()
-             })
-           </script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip()
+        })
+    </script>
 
 </body>
 
